--- a/about_us.html
+++ b/about_us.html
@@ -99,74 +99,79 @@
     <main>
       <div class="main-wrapper">
         <div class="content-container">
-          <div class="main-heading-wrapper">
-            <div class="main-heading-left"></div>
-            <h1 class="main-heading">About us</h1>
-          </div>
-          <p class="main-heading-lead">— Let us explore together. Come join us at the Community Science Museum where
-            we’re committed
-            to making science accessible to all.</p>
+
           <!-- <h2 class="main-sub-heading sub-heading-box">— Let us explore together
           </h2> -->
-          <section class="section-container vision-section">
-            <!-- <div class="info-box item-1">
-              <h5 class="info-box-heading">— Let us explore together</h5>
-              <p>
-                Come join us at the Community Science Museum where we’re committed
-                to making science accessible to all.
-              </p>
-            </div> -->
-            <div class="image-box item-1">
-              <img class="vision-img" src="images\together_large.jpg"
-                alt="A 10 year old white boy and a black girl who is a couple of years younger is studying an mechanical exhibit in a glass cabinet. They are both holding their hands towards the glass, and the boy is point to something of interest." />
+          <section class="section-container">
+            <div class="header">
+              <div class="main-heading-wrapper">
+                <div class="main-heading-left"></div>
+                <h1 class="main-heading">About us</h1>
+              </div>
+              <hr class="heading-divider" />
+              <p class="main-heading-lead">— Let us explore together. Come join us at the Community Science Museum where
+                we’re committed
+                to making science accessible to all.</p>
             </div>
-            <div class="info-box item-2">
-              <h5 class="info-box-heading">Science should be Fun</h5>
-              <p>
-                We believe science should not be confined to the textbook, but
-                brought to live through exhibits. This is why we have over 1000
-                different exhibits on the many varied subjects of science to
-                explore.
-              </p>
-              <p>
-                Many of these exhibits are designed for you to interact with and
-                play around to see science come to life (apart from the dinosaur
-                exhibits – they only come to life at night when everyone’s gone
-                home).
-              </p>
+            <div class="vision-grid">
+              <div class="image-box item-1">
+                <img class="vision-img" src="images\together_large.jpg"
+                  alt="A 10 year old white boy and a black girl who is a couple of years younger is studying an mechanical exhibit in a glass cabinet. They are both holding their hands towards the glass, and the boy is point to something of interest." />
+              </div>
+              <div class="info-box item-2">
+                <h5 class="info-box-heading">Science should be Fun</h5>
+                <p>
+                  We believe science should not be confined to the textbook, but
+                  brought to live through exhibits. This is why we have over 1000
+                  different exhibits on the many varied subjects of science to
+                  explore.
+                </p>
+                <p>
+                  Many of these exhibits are designed for you to interact with and
+                  play around to see science come to life (apart from the dinosaur
+                  exhibits – they only come to life at night when everyone’s gone
+                  home).
+                </p>
+              </div>
+              <div class="info-box item-3">
+                <h5 class="info-box-heading">History of Science</h5>
+                <p>
+                  Over the course of human history, science has developed from our
+                  early understanding of fire, wind, water, and earth to exploring
+                  everything from galaxies far away to the very building blocks of
+                  life itself.
+                </p>
+              </div>
+              <div class="info-box item-4">
+                <h5 class="info-box-heading">Our Vision</h5>
+                <p>
+                  The aim of our museum is to create a space where everyone can
+                  experience the wonders of our discoveries and perhaps even ignite
+                  a lifelong passion to continue the exploration of the world around
+                  us.
+                </p>
+              </div>
+              <div class="cta-wrapper info-box item-5">
+                <p>Do you have any questions?</p>
+                <a href="contact.html" class="button">
+                  Get in touch
+                </a>
+              </div>
             </div>
-            <div class="info-box item-3">
-              <h5 class="info-box-heading">History of Science</h5>
-              <p>
-                Over the course of human history, science has developed from our
-                early understanding of fire, wind, water, and earth to exploring
-                everything from galaxies far away to the very building blocks of
-                life itself.
-              </p>
-            </div>
-            <div class="info-box item-4">
-              <h5 class="info-box-heading">Our Vision</h5>
-              <p>
-                The aim of our museum is to create a space where everyone can
-                experience the wonders of our discoveries and perhaps even ignite
-                a lifelong passion to continue the exploration of the world around
-                us.
-              </p>
-            </div>
+
           </section>
-          <div class="cta-wrapper info-box">
-            <p>Do you have any questions?</p>
-            <a href="contact.html" class="button">
-              Get in touch
-            </a>
-          </div>
+
+
           <section class="gallery-section">
-            <div class="main-heading-wrapper">
-              <div class="main-heading-left"></div>
-              <h4 class="main-heading">Meet our passionate tour guides</h4>
+            <div class="header">
+              <div class="main-heading-wrapper">
+                <div class="main-heading-left"></div>
+                <h4 class="main-heading">Meet our passionate tour guides</h4>
+              </div>
+              <hr class="heading-divider" />
+              <p class="main-heading-lead">— We hope to see you soon
+              </p>
             </div>
-            <h2 class="main-sub-heading">— We hope to see you soon
-            </h2>
             <div class="gallery-wrapper">
               <figure class="tourguide">
                 <img src="images\charles.png"
