--- a/explore.html
+++ b/explore.html
@@ -102,16 +102,20 @@
       <div class="main-wrapper">
         <div class="content-container">
           <section class="kids-section">
-            <div class="main-heading-wrapper">
-              <div class="main-heading-left"></div>
-              <h1 class="main-heading">For Kids</h1>
+            <div class="header">
+              <div class="main-heading-wrapper">
+                <div class="main-heading-left"></div>
+                <h1 class="main-heading">For kids</h1>
+              </div>
+              <hr class="heading-divider" />
+              <p class="main-heading-lead">— Are you a young person looking to learn more about science? Come
+                on down to our museum, there’s plenty to see and do</p>
             </div>
             <div class="kids-container">
+              <figure class="kids-image kids-figure">
+                <img src="images/museum-1.jpg" class="kids-image" />
+              </figure>
               <div class="kids-text">
-                <p class="main-heading-lead">
-                  — Are you a young person looking to learn more about science? Come
-                  on down to our museum, there’s plenty to see and do.
-                </p>
                 <p>
                   You can learn about Newtonian physics from our bumper swing, or
                   why not travel back in time and meet our resident Woolly Mammoth?
@@ -121,10 +125,7 @@
                   so make sure you come ready to learn and explore.
                 </p>
                 <p>You can also join one of our popular science clubs.</p>
-              </div>
-              <figure class="kids-image kids-figure">
-                <img src="images/museum-1.jpg" class="kids-image" />
-              </figure>
+              </div> 
             </div>
           </section>
 
@@ -204,12 +205,16 @@
 
 
           <section class="research-section">
-            <div class="main-heading-wrapper">
-              <div class="main-heading-left"></div>
-              <h1 class="main-heading">Teachers & researchers</h1>
+            <div class="header">
+              <div class="main-heading-wrapper">
+                <div class="main-heading-left"></div>
+                <h1 class="main-heading">Teachers & researchers</h1>
+              </div>
+              <hr class="heading-divider" />
+              <p class="main-heading-lead">— Are you a young person looking to learn more about science? Come
+                on down to our museum, there’s plenty to see and do</p>
             </div>
-            <p class="main-heading-lead">— Lorem ipsum</p>
-            <div class="research-wrapper">
+            <div class="research-grid">
               <div class="info-box" id="item-4">
                 <h3 class="info-box-heading">For Teachers</h3>
                 <p>
