--- a/get_involved.html
+++ b/get_involved.html
@@ -99,61 +99,68 @@
     <main>
       <div class="main-wrapper">
         <div class="content-container">
-          <div class="main-heading-wrapper">
-            <div class="main-heading-left"></div>
-            <h1 class="main-heading">You can support our museum in various ways</h1>
-          </div>
-          <p class="main-heading-lead">— In order for us to create the best possible museum, we need your
-            contribution
-          </p>
+
           <section class="section-container">
-            <div class="info-box" id="item-1">
-              <h3 class="info-box-heading">Donations</h3>
-              <p>
-                There are various ways you can support the museum. Donations are
-                very welcome and are an important way we keep this museum open and
-                accessible to the whole community.
-              </p>
-              <p>
-                You can also support us by donating items of interest to the
-                museum’s collections. If you have some item or collection that you
-                think others would enjoy, please let us know by contacting our
-                Collections Department and they will be able to assist you.
+            <div class="header">
+              <div class="main-heading-wrapper">
+                <div class="main-heading-left"></div>
+                <h1 class="main-heading">You can support our museum in various ways</h1>
+              </div>
+              <hr class="heading-divider" />
+              <p class="main-heading-lead">— In order for us to create the best possible museum, we need your
+                contribution
               </p>
             </div>
-            <div class="info-box" id="item-2">
-              <h3 class="info-box-heading">Volunteer</h3>
-              <p>
-                A number of people volunteer their time and effort to keep the
-                displays in good order and ready for visitors to come and enjoy.
-                Volunteering has its perks including getting to see behind the
-                scenes of a working museum, access to staff-only lectures, and a
-                monthly lunch where all staff and volunteers come together to
-                discuss ideas for future exhibits and strategies for the museum.
-              </p>
-              <p>
-                You can help volunteer in a number of different spheres. Please
-                contact us if you’d like to find out more about how you can get
-                involved.
-              </p>
-            </div>
-            <div class="info-box" id="item-3">
-              <h3 class="info-box-heading">Internships</h3>
-              <p>
-                Are you interested in working in a museum? Do you enjoy the fun
-                and excitement of sharing the wonders of nature with people?
-              </p>
-              <p>
-                Well you could be just the right person to enjoy an internship at
-                the museum.
-              </p>
+            <div class="support-grid">
+              <div class="info-box" id="item-1">
+                <h3 class="info-box-heading">Donations</h3>
+                <p>
+                  There are various ways you can support the museum. Donations are
+                  very welcome and are an important way we keep this museum open and
+                  accessible to the whole community.
+                </p>
+                <p>
+                  You can also support us by donating items of interest to the
+                  museum’s collections. If you have some item or collection that you
+                  think others would enjoy, please let us know by contacting our
+                  Collections Department and they will be able to assist you.
+                </p>
+              </div>
+              <div class="info-box" id="item-2">
+                <h3 class="info-box-heading">Volunteer</h3>
+                <p>
+                  A number of people volunteer their time and effort to keep the
+                  displays in good order and ready for visitors to come and enjoy.
+                  Volunteering has its perks including getting to see behind the
+                  scenes of a working museum, access to staff-only lectures, and a
+                  monthly lunch where all staff and volunteers come together to
+                  discuss ideas for future exhibits and strategies for the museum.
+                </p>
+                <p>
+                  You can help volunteer in a number of different spheres. Please
+                  contact us if you’d like to find out more about how you can get
+                  involved.
+                </p>
+              </div>
+              <div class="info-box" id="item-3">
+                <h3 class="info-box-heading">Internships</h3>
+                <p>
+                  Are you interested in working in a museum? Do you enjoy the fun
+                  and excitement of sharing the wonders of nature with people?
+                </p>
+                <p>
+                  Well you could be just the right person to enjoy an internship at
+                  the museum.
+                </p>
+              </div>
+              <div class="cta-wrapper info-box" id="item-4">
+                <p>Do you want to help us out?</p>
+                <a href="contact.html" class="button">Get in touch
+                </a>
+              </div>
             </div>
           </section>
-          <div class="cta-wrapper info-box">
-            <p>Do you want to help us out?</p>
-            <a href="contact.html" class="button">Get in touch
-            </a>
-          </div>
+
         </div>
       </div>
       <div class="newsletter-wrapper">
