--- a/visit.html
+++ b/visit.html
@@ -101,146 +101,161 @@
     <main>
       <div class="main-wrapper">
         <div class="content-container">
-          <div class="main-heading-wrapper">
-            <div class="main-heading-left"></div>
-            <h1 class="main-heading">
-              Admission, location & opening hours
-            </h1>
-          </div>
-          <p class="main-heading-lead">— You will find us right in the center of Bergen
-          </p>
-          <section class="info-section">
-            <div class="info-box" id="item-1">
-              <h3 class="info-box-heading">Admission</h3>
-              <p><strong>Tickets can be bought online as well as at the site.</strong></p>
-              <ul class="info-list">
-                <li>
-                  Admission tickets are <em>100 NOK per person</em>
-                </li>
-                <li>
-                  Children under the <em>age of 5</em> have <em>free admission</em>
-                </li>
-                <li>
-                  There are guided tours of the museum that leave every hour. These
-                  tours are <em>150 NOK per person</em> and include a handy printed
-                  guide of the museum.
-                </li>
-                <li>
-                  If you would like to organize a guided tour for your group of 6 or
-                  more people, please <a href="contact.html">contact</a> us to
-                  arrange the tour.
-                </li>
-                <li>
-                  If you want to book a place in a special event or join a children's
-                  club, please <a href="contact.html">contact</a> us.
-                </li>
-                <li>
-                  If you have any question, please read our
-                  <a href="contact.html#faq">FAQ</a>, or send us a question using
-                  the
-                  <a href="contact.html">contact form</a>
-                </li>
-              </ul>
-            </div>
-            <div class="info-box" id="item-2">
-              <h3 class="info-box-heading">Location</h3>
-              <div class="location-wrapper">
-                <p>The museum is located at:</p>
-                <p id="street">Nygårdsgaten 112</p>
-                <p id="postal">5008 Bergen</p>
+
+          <section class="section-container">
+            <div class="header">
+              <div class="main-heading-wrapper">
+                <div class="main-heading-left"></div>
+                <h1 class="main-heading">
+                  Admission, location & opening hours
+                </h1>
               </div>
-              <iframe title="address to Community Science Museum "
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1971.6798987692655!2d5.331311116446823!3d60.384447582040345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x463cfeacef54f159%3A0x62678fec8f2c1061!2sNyg%C3%A5rdsgaten%20112%2C%205008%20Bergen!5e0!3m2!1sen!2sno!4v1606574333874!5m2!1sen!2sno"
-                width="200" height="350" allowfullscreen=""></iframe>
+              <hr class="heading-divider" />
+              <p class="main-heading-lead">— You will find us right in the center of Bergen
+              </p>
             </div>
-            <div class="info-box" id="item-3">
-              <h3 class="info-box-heading">Hours & prices:</h3>
-              <table>
-                <tr>
-                  <th scope="row">Monday:</th>
-                  <td>Closed</td>
-                </tr>
-                <tr class="even">
-                  <th scope="row">Tuesday:</th>
-                  <td>10:00 — 16:00</td>
-                </tr>
-                <tr>
-                  <th scope="row">Wednesday:</th>
-                  <td>10:00 — 16:00</td>
-                </tr>
-                <tr class="even">
-                  <th scope="row">Thursday:</th>
-                  <td>10:00 — 16:00</td>
-                </tr>
-                <tr>
-                  <th scope="row">Friday:</th>
-                  <td>10:00 — 19:00</td>
-                </tr>
-                <tr class="even">
-                  <th scope="row">Saturday:</th>
-                  <td>09:00 — 16:00</td>
-                </tr>
-                <tr>
-                  <th scope="row">Sunday:</th>
-                  <td>09:00 — 13:00</td>
-                </tr>
-              </table>
-              <table>
-                <tr>
-                  <th scope="row">Children under 5:</th>
-                  <td>Free</td>
-                </tr>
-                <tr class="even">
-                  <th scope="row">Children over 5:</th>
-                  <td>100 NOK</td>
-                </tr>
-                <tr>
-                  <th scope="row">Adults:</th>
-                  <td>100 NOK</td>
-                </tr>
-                <tr class="even">
-                  <th scope="row">Guided tour:</th>
-                  <td>150 NOK</td>
-                </tr>
-              </table>
+            <div class="info-grid">
+              <div class="info-box" id="item-1">
+                <h3 class="info-box-heading">Admission</h3>
+                <p><strong>Tickets can be bought online as well as at the site.</strong></p>
+                <ul class="info-list">
+                  <li>
+                    Admission tickets are <em>100 NOK per person</em>
+                  </li>
+                  <li>
+                    Children under the <em>age of 5</em> have <em>free admission</em>
+                  </li>
+                  <li>
+                    There are guided tours of the museum that leave every hour. These
+                    tours are <em>150 NOK per person</em> and include a handy printed
+                    guide of the museum.
+                  </li>
+                  <li>
+                    If you would like to organize a guided tour for your group of 6 or
+                    more people, please <a href="contact.html">contact</a> us to
+                    arrange the tour.
+                  </li>
+                  <li>
+                    If you want to book a place in a special event or join a children's
+                    club, please <a href="contact.html">contact</a> us.
+                  </li>
+                  <li>
+                    If you have any question, please read our
+                    <a href="contact.html#faq">FAQ</a>, or send us a question using
+                    the
+                    <a href="contact.html">contact form</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="info-box" id="item-2">
+                <h3 class="info-box-heading">Location</h3>
+                <div class="location-wrapper">
+                  <p>The museum is located at:</p>
+                  <p id="street">Nygårdsgaten 112</p>
+                  <p id="postal">5008 Bergen</p>
+                </div>
+                <iframe title="address to Community Science Museum "
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1971.6798987692655!2d5.331311116446823!3d60.384447582040345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x463cfeacef54f159%3A0x62678fec8f2c1061!2sNyg%C3%A5rdsgaten%20112%2C%205008%20Bergen!5e0!3m2!1sen!2sno!4v1606574333874!5m2!1sen!2sno"
+                  width="200" height="350" allowfullscreen=""></iframe>
+              </div>
+              <div class="info-box" id="item-3">
+                <h3 class="info-box-heading">Hours & prices:</h3>
+                <div class="table-wrapper">
+                  <table>
+                    <tr>
+                      <th scope="row">Monday:</th>
+                      <td>Closed</td>
+                    </tr>
+                    <tr class="even">
+                      <th scope="row">Tuesday:</th>
+                      <td>10:00 — 16:00</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">Wednesday:</th>
+                      <td>10:00 — 16:00</td>
+                    </tr>
+                    <tr class="even">
+                      <th scope="row">Thursday:</th>
+                      <td>10:00 — 16:00</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">Friday:</th>
+                      <td>10:00 — 19:00</td>
+                    </tr>
+                    <tr class="even">
+                      <th scope="row">Saturday:</th>
+                      <td>09:00 — 16:00</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">Sunday:</th>
+                      <td>09:00 — 13:00</td>
+                    </tr>
+                  </table>
+                  <table>
+                    <tr>
+                      <th scope="row">Children under 5:</th>
+                      <td>Free</td>
+                    </tr>
+                    <tr class="even">
+                      <th scope="row">Children over 5:</th>
+                      <td>100 NOK</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">Adults:</th>
+                      <td>100 NOK</td>
+                    </tr>
+                    <tr class="even">
+                      <th scope="row">Guided tour:</th>
+                      <td>150 NOK</td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
             </div>
           </section>
           <!-- <div id="facilities"></div> -->
-          <div class="main-heading-wrapper">
-            <div class="main-heading-left"></div>
-            <h4 class="main-heading">
-              Facilities
-            </h4>
 
-          </div>
-          <section class="facilities-section">
 
-            <div id="accessibility" class="info-box item-1">
-              <h5 class="info-box-heading">Accessibility</h5>
-              <p>The museum has wheelchair accessibility ramps.</p>
-              <p>
-                It also has audio guides and braille display signs for the
-                visually impaired.
-              </p>
+          <section class="section-container">
+            <div class="header">
+              <div class="main-heading-wrapper">
+                <div class="main-heading-left"></div>
+                <h4 class="main-heading">
+                  Facilities
+                </h4>
+              </div>
+              <hr class="heading-divider" />
+              <p class="main-heading-lead">— Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum</p>
             </div>
-            <div class="image-box item-2"></div>
-            <div id="food-drink" class="info-box item-3">
-              <h5 class="info-box-heading">Food and Drink</h5>
-              <p>
-                There is a café attached to the museum where you can get light
-                lunches, soft drinks, coffee, snacks and more.
-              </p>
+            <div class="facilities-grid">
+              <div id="accessibility" class="info-box item-1">
+                <h5 class="info-box-heading">Accessibility</h5>
+                <p>The museum has wheelchair accessibility ramps.</p>
+                <p>
+                  It also has audio guides and braille display signs for the
+                  visually impaired.
+                </p>
+              </div>
+              <div class="image-box item-2"></div>
+              <div id="food-drink" class="info-box item-3">
+                <h5 class="info-box-heading">Food and Drink</h5>
+                <p>
+                  There is a café attached to the museum where you can get light
+                  lunches, soft drinks, coffee, snacks and more.
+                </p>
+              </div>
+              <div class="image-box item-4"></div>
+              <div id="shop" class="info-box item-5">
+                <h5 class="info-box-heading">Shop</h5>
+                <p>
+                  Our shop offers a range of memorabilia from the museum as well as
+                  great gifts and activity packs that allow you to continue to
+                  explore science even after you have left the museum.
+                </p>
+              </div>
+              <div class="image-box item-6"></div>
             </div>
-            <div class="image-box item-4"></div>
-            <div id="shop" class="info-box item-5">
-              <h5 class="info-box-heading">Shop</h5>
-              <p>
-                Our shop offers a range of memorabilia from the museum as well as
-                great gifts and activity packs that allow you to continue to
-                explore science even after you have left the museum.
-              </p>
-            </div>
-            <div class="image-box item-6"></div>
           </section>
         </div>
       </div>
