--- a/exhibitions.html
+++ b/exhibitions.html
@@ -100,14 +100,17 @@
     <main>
       <div class="main-wrapper">
         <div class="content-container">
-          <div class="main-heading-wrapper">
-            <div class="main-heading-left"></div>
-            <h1 class="main-heading">Exhibition spaces</h1>
-          </div>
-          <p class="main-heading-lead">— Our more than 1000 unique exhibitions are dived into 5 main
-            spaces for you to explore</p>
           <section class="section-container">
-            <div class="card-wrapper">
+            <div class="header">
+              <div class="main-heading-wrapper">
+                <div class="main-heading-left"></div>
+                <h1 class="main-heading">Exhibition spaces</h1>
+              </div>
+              <hr class="heading-divider" />
+              <p class="main-heading-lead">— Our more than 1000 unique exhibitions are dived into 5 main
+                spaces for you to explore</p>
+            </div>
+            <div class="card-grid">
               <!-- <div id="cosmology-anchor"></div> -->
               <div class="card" id="cosmology-anchor">
                 <div class="card-image"><img src="images\cosmology_large.jpg" /></div>
