--- a/about_us.html
+++ b/about_us.html
@@ -102,7 +102,7 @@
 
           <!-- <h2 class="main-sub-heading sub-heading-box">— Let us explore together
           </h2> -->
-          <section class="section-container">
+          <section>
             <div class="header">
               <div class="main-heading-wrapper">
                 <div class="main-heading-left"></div>
