--- a/contact.html
+++ b/contact.html
@@ -98,21 +98,30 @@
     <main>
       <div class="main-wrapper">
         <div class="content-container">
-          <div class="main-heading-wrapper">
+          <!-- <div class="main-heading-wrapper">
             <div class="main-heading-left"></div>
             <h1 class="main-heading">Contact & FAQ</h1>
           </div>
           <h2 class="main-sub-heading">— If you need to get in touch with us, please use this form
-          </h2>
+          </h2> -->
           <section class="contact-section">
+            <div class="header">
+              <div class="main-heading-wrapper">
+                <div class="main-heading-left"></div>
+                <h1 class="main-heading">Contact</h1>
+              </div>
+              <hr class="heading-divider" />
+              <p class="main-heading-lead">— Please submit your inquiry, and we will get back to you as soon as
+                possible</p>
+            </div>
             <form class="form info-box">
-              <ul class="form-info">
+              <!-- <ul class="form-info">
                 <li>
                   Submit your inquiry, and we will get back to you as soon as
-                  possible.
+                  possible
                 </li>
                 <li>Please also see our FAQ before submitting a question.</li>
-              </ul>
+              </ul> -->
               <div class="form-block">
                 <label for="name" class="label">Name</label>
                 <input type="text" id="name" placeholder="Name" />
@@ -159,7 +168,14 @@
             </form>
           </section>
           <section class="faq-section">
-            <h2>Frequently Asked Questions</h2>
+            <div class="header">
+              <div class="main-heading-wrapper">
+                <div class="main-heading-left"></div>
+                <h1 class="main-heading">FAQ</h1>
+              </div>
+              <hr class="heading-divider" />
+              <p class="main-heading-lead">— Commonly asked questions about our museum</p>
+            </div>
             <ol class="faq">
               <li>
                 Question about opening hours:
