--- a/explore.html
+++ b/explore.html
@@ -112,10 +112,11 @@
                 on down to our museum, there’s plenty to see and do</p>
             </div>
             <div class="kids-container">
-              <figure class="kids-image kids-figure">
-                <img src="images/museum-1.jpg" class="kids-image" />
+              <figure class="image-box" id="image-box-kids">
+                <img src="images/museum-1.jpg" />
               </figure>
-              <div class="kids-text">
+              <div class="info-box" id="info-box-kids">
+                <!-- <h3 class="info-box-heading">For Kids</h3> -->
                 <p>
                   You can learn about Newtonian physics from our bumper swing, or
                   why not travel back in time and meet our resident Woolly Mammoth?
@@ -125,7 +126,7 @@
                   so make sure you come ready to learn and explore.
                 </p>
                 <p>You can also join one of our popular science clubs.</p>
-              </div> 
+              </div>
             </div>
           </section>
 
@@ -201,8 +202,6 @@
               </div>
             </div>
           </section>
-
-
 
           <section class="research-section">
             <div class="header">
