--- a/get_involved.html
+++ b/get_involved.html
@@ -100,7 +100,7 @@
       <div class="main-wrapper">
         <div class="content-container">
 
-          <section class="section-container">
+          <section>
             <div class="header">
               <div class="main-heading-wrapper">
                 <div class="main-heading-left"></div>
