--- a/visit.html
+++ b/visit.html
@@ -216,7 +216,7 @@
           <!-- <div id="facilities"></div> -->
 
 
-          <section class="section-container">
+          <section>
             <div class="header">
               <div class="main-heading-wrapper">
                 <div class="main-heading-left"></div>
