--- a/exhibitions.html
+++ b/exhibitions.html
@@ -100,7 +100,7 @@
     <main>
       <div class="main-wrapper">
         <div class="content-container">
-          <section class="section-container">
+          <section>
             <div class="header">
               <div class="main-heading-wrapper">
                 <div class="main-heading-left"></div>
