--- a/about_us.html
+++ b/about_us.html
@@ -115,7 +115,7 @@
             </div>
             <div class="vision-grid">
               <div class="image-box item-1">
-                <img class="vision-img" src="images\together_large.jpg"
+                <img class="vision-img image-box" src="images\together_large.jpg"
                   alt="A 10 year old white boy and a black girl who is a couple of years younger is studying an mechanical exhibit in a glass cabinet. They are both holding their hands towards the glass, and the boy is point to something of interest." />
               </div>
               <div class="info-box item-2">
