--- a/exhibitions.html
+++ b/exhibitions.html
@@ -237,9 +237,13 @@
             </div>
           </section>
           <section class="gallery-section">
-            <div class="main-heading-wrapper">
-              <div class="main-heading-left"></div>
-              <h4 class="main-heading">Come visit us and continue your exploration</h4>
+            <div class="header">
+              <div class="main-heading-wrapper">
+                <div class="main-heading-left"></div>
+                <h1 class="main-heading">Lorem ipsum</h1>
+              </div>
+              <hr class="heading-divider" />
+              <p class="main-heading-lead">— Come visit us and continue your exploration</p>
             </div>
             <div class="gallery-wrapper">
               <figure>
