--- a/index.html
+++ b/index.html
@@ -196,13 +196,17 @@
       <div class="main-wrapper">
         <div class="content-container">
           <section class="news-section">
-            <!-- <div id="news-anchor"></div> -->
-            <div class="main-heading-wrapper">
-              <div class="main-heading-left"></div>
-              <h3 id="special-event" class="main-heading">News & special events</h3>
+            <div class="header">
+              <div class="main-heading-wrapper">
+                <div class="main-heading-left"></div>
+                <h1 class="main-heading">News & special events</h1>
+              </div>
+              <hr class="heading-divider" />
+              <p class="main-heading-lead">— Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum
+              </p>
             </div>
-            <p class="main-heading-lead">— Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-              deserunt mollit anim id est laborum</p>
+            <!-- <div id="news-anchor"></div> -->
             <div class="slider-wrapper">
               <div class="slider-outer-container">
                 <div class="slider-inner-container">
@@ -287,12 +291,16 @@
           </section>
 
           <section class="clubs-section">
-            <div class="main-heading-wrapper">
-              <div class="main-heading-left"></div>
-              <h3 id="clubs" class="main-heading">Join one of our children clubs</h3>
+            <div class="header">
+              <div class="main-heading-wrapper">
+                <div class="main-heading-left"></div>
+                <h1 class="main-heading">Join one of our children clubs</h1>
+              </div>
+              <hr class="heading-divider" />
+              <p class="main-heading-lead"> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum
+              </p>
             </div>
-            <p class="main-heading-lead">— Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-              deserunt mollit anim id est laborum</p>
             <div class="clubs-wrapper">
               <figure class="clubs">
                 <a href="explore.html#club-anchor"><img src="images\club_1.jpg"
