--- a/explore.html
+++ b/explore.html
@@ -246,11 +246,12 @@
               </div>
               <!-- <div class="image-box" id="item-6">
               </div> -->
+              <div class="cta-wrapper info-box" id="item-6">
+                <p>Are you a teacher or a researcher?</p>
+                <a href="contact.html" class="button">Get in touch</a>
+              </div>
             </div>
-            <div class="cta-wrapper info-box" id="research-cta-wrapper">
-              <p>Are you a teacher or a researcher?</p>
-              <a href="contact.html" class="button">Get in touch</a>
-            </div>
+            
           </section>
 
         </div>
