--- a/visit.html
+++ b/visit.html
@@ -102,7 +102,7 @@
       <div class="main-wrapper">
         <div class="content-container">
 
-          <section class="section-container">
+          <section>
             <div class="header">
               <div class="main-heading-wrapper">
                 <div class="main-heading-left"></div>
