exhibit page improved

--- a/visit.html
+++ b/visit.html
@@ -225,8 +225,7 @@
                 </h4>
               </div>
               <hr class="heading-divider" />
-              <p class="main-heading-lead">— Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum</p>
+              <p class="main-heading-lead">— Our museum offers top modern facilities</p>
             </div>
             <div class="facilities-grid">
               <div id="accessibility" class="info-box item-1">
